# mcfast

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: mac_x86.yml
python/: benchmark_stars.py
src/: constants.rs  cubes.rs  lib.rs  merge_tree.rs  tau.rs
src/accelerants/: baruteau.rs  cubes.rs  evolution.rs  gw.rs  kick.rs  luminosity.rs  mod.rs  powerlaw.rs  prograde.rs  star_mass.rs  tau.rs  tde.rs  torque.rs  units.rs
src/tools/: merge_tree.rs
