[package]
name = "mcfast"
version = "0.1.6"
edition = "2021"
exclude = [
  "python/",
  "demo/",
  "v11/",
  "v11_output/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mcfast"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.28.0"
pyo3 = "0.28.2"
rayon = "1.11.0"
# splines = "5.0.0"
glob = "0.3"
